# job_posting_radar

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py
app/ingest/: __init__.py  fetch.py
app/ingest/sources/: __init__.py  justjoin.py  nofluff.py
scripts/: run_ingest.py
tests/: test_nofluff.py
