[project]
name = "job-posting-radar"
version = "0.1.0"
description = "Job Postings Radar ingestion and processing pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9.0",
  "pydantic-settings>=2.3.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["data*", "docker*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
src = ["app", "scripts"]
target-version = "py311"
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["app"]


